[package]
name = "better-aimassist"
version = "0.1.0"
edition = "2024"
description = "Virtual Xbox controller proxy that exploits aim assist in PC games via rapid axis jitter"
license = "MIT"
repository = "https://github.com/Kira-Kohler/BetterAimAssist"

[[bin]]
name = "BetterAimAssist"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
vigem-client = "0.1"
rusty-xinput = "1.3"
winreg = "0.52"
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
hidapi = { version = "2", features = ["windows-native"] }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Media_Audio",
]